0.04
- Update req. modules version.

0.03 (August, 03, 2012)
- Add git repository to doc.
- Add 'callback' parameter.

0.02 (July 24, 2012)
- Change versions of my modules to last version.
- Fix serialize with $INPUT_RECORD_SEPARATOR.
- Remove obsolete code.

0.01 (June 22, 2012)
- First version.